--- a/style.css
+++ b/style.css
@@ -53,6 +53,25 @@ body {
   color: #fff;
   text-shadow: 0 0 10px #ff0000, 0 0 20px #ff0000;
   animation: glow 2s ease-in-out infinite alternate;
+  animation: shake 0.3s ease-in-out infinite;
+}
+
+@keyframes shake {
+  0% {
+      transform: translate(0, 0);
+  }
+  25% {
+      transform: translate(1px, -1px);
+  }
+  50% {
+      transform: translate(-1px, 1px);
+  }
+  75% {
+      transform: translate(-1px, -1px);
+  }
+  100% {
+      transform: translate(1px, 1px);
+  }
 }
 
 @keyframes glow {
@@ -94,8 +113,8 @@ body {
 .tree {
   right: 1%;
   position: relative;
-  width: 300px;
-  height: 400px;
+  /* width: 300px; */
+  height: 600px;
   margin: 0 auto;
   display: flex;
   justify-content: center;
@@ -285,7 +304,7 @@ body {
 }
 
 .cloud {
-  position: absolute;
+  position: relative;
   width: 100px;
   height: auto;
   opacity: 0.6;
@@ -376,7 +395,7 @@ body {
 .star-top {
   position: absolute;
   top: -3%;
-  left: 53%;
+  left: 51%;
   transform: translateX(-50%);
   font-size: 24px;
   animation: starTwinkle 1.5s infinite alternate;
@@ -396,7 +415,7 @@ body {
 /* Hiệu ứng ánh sáng ông già Noel */
 .santa-container {
   position: fixed;
-  top: 20%;
+  top: 5%;
   left: -200px;
   animation: flyAcross 15s linear infinite;
   z-index: 1000;
@@ -405,8 +424,8 @@ body {
 }
 
 .santa {
-  width: 200px;
-  height: auto;
+  width: 448px;
+  height: 233px;
   margin-right: -30px;
   z-index: 1;
 }
@@ -557,4 +576,10 @@ body {
   font-family: "Dancing Script", cursive;
   font-size: 20px;
   background-color: red;
+}
+
+.bells-container img{
+  width: 70px;
+  height: 70px;
+  border-radius: 50%;
 }
